--- a/serverless.yml
+++ b/serverless.yml
@@ -109,7 +109,7 @@ resources:
         Precedence: 0
         UserPoolId:
           Ref: CognitoUserPool
-        RoleArn: arn:aws:iam::#{AWS::AccountId}:role/aa${self:provider.stackName}-AdminRole
+        RoleArn: arn:aws:iam::#{AWS::AccountId}:role/${self:provider.stackName}-AdminRole
 
     AdminUserRole:
         Type: "AWS::IAM::Role"
@@ -166,6 +166,8 @@ resources:
         Ref: CognitoIdentityPool
     CognitoDomain:
       Value: ${self:provider.config.cognitoDomain}
+    CognitoAuthRole:
+      Value: !GetAtt CognitoAuthorizedRole.Arn
     CognitoAdminGroup:
       Value: ${self:provider.config.cognitoAdminGroup}
     IdentityProviderName:
